log
Sat 10 Sep 2022 06:28:59 PM UTC: 
 tests:  0|6
total_score: 0/70
97b1497
Sun 11 Sep 2022 10:11:29 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:20: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   55 |   HashMap * map = (Hashmap *)malloc(sizeof(HasMap));
      |                    ^~~~~~~
      |                    HashMap
hashmap.c:55:20: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:29: error: expected expression before ‘)’ token
   55 |   HashMap * map = (Hashmap *)malloc(sizeof(HasMap));
      |                             ^
hashmap.c:61:12: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   61 |     return mapa;
      |            ^~~~
      |            map
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b555ae1
Sun 11 Sep 2022 10:11:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:44: error: ‘HasMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   55 |   HashMap * map = (HashMap *)malloc(sizeof(HasMap));
      |                                            ^~~~~~
      |                                            HashMap
hashmap.c:55:44: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:61:12: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   61 |     return mapa;
      |            ^~~~
      |            map
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1dc7f88
Sun 11 Sep 2022 10:11:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:12: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   61 |     return mapa;
      |            ^~~~
      |            map
hashmap.c:61:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6873b3d
Sun 11 Sep 2022 10:12:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d2c8876
Sun 11 Sep 2022 10:12:55 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
0547c68
Sun 11 Sep 2022 11:24:20 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
9000198
Sun 11 Sep 2022 11:29:11 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
ba7c58a
Sun 11 Sep 2022 11:32:23 PM UTC: 
 hashmap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 30/70
530decf
Sun 11 Sep 2022 11:34:32 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
14d7311
Sun 11 Sep 2022 11:34:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
44fcd6b
Sun 11 Sep 2022 11:35:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:21: error: array subscript has type ‘char’ [-Werror=char-subscripts]
   82 |   while(map->buckets[i] != NULL)
      |                     ^
hashmap.c:84:30: error: array subscript has type ‘char’ [-Werror=char-subscripts]
   84 |     if( is_equal(map->buckets[i]->key, key) )
      |                              ^
hashmap.c:87:26: error: array subscript has type ‘char’ [-Werror=char-subscripts]
   87 |       return(map->buckets[i]->value);
      |                          ^
cc1: all warnings being treated as errors
Compilation failed
5a6eef8
Sun 11 Sep 2022 11:35:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
697c468
Sun 11 Sep 2022 11:37:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
0355f26
Sun 11 Sep 2022 11:40:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
64a6cdd
Sun 11 Sep 2022 11:49:38 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:86:47: error: passing argument 2 of ‘is_equal’ makes pointer from integer without a cast [-Werror=int-conversion]
   86 |           (is_equal(map->buckets[i]->key, key == 0))
      |                                           ~~~~^~~~
      |                                               |
      |                                               int
hashmap.c:35:32: note: expected ‘void *’ but argument is of type ‘int’
   35 | int is_equal(void* key1, void* key2){
      |                          ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
447c97e
Sun 11 Sep 2022 11:50:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:86:50: error: ‘false’ undeclared (first use in this function)
   86 |           (is_equal(map->buckets[i]->key, key == false))
      |                                                  ^~~~~
hashmap.c:86:50: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
cdcb0f1
Sun 11 Sep 2022 11:50:25 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Sun 11 Sep 2022 11:51:51 PM UTC: 
 hashmap.c | 15 +--------------
 1 file changed, 1 insertion(+), 14 deletions(-)
 tests:  6|4
total_score: 30/70
2567dc4
Sun 11 Sep 2022 11:52:49 PM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:104:2: error: ‘insigned’ undeclared (first use in this function)
  104 |  insigned long i = map->current + 1;
      |  ^~~~~~~~
hashmap.c:104:2: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:104:10: error: expected ‘;’ before ‘long’
  104 |  insigned long i = map->current + 1;
      |          ^~~~~
      |          ;
hashmap.c:106:21: error: ‘i’ undeclared (first use in this function)
  106 |  while(map->buckets[i] == NULL)
      |                     ^
hashmap.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
  116 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
917e724
Sun 11 Sep 2022 11:52:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
733d6b5
Sun 11 Sep 2022 11:54:05 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
  116 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ad0a1a1
